fix(canary-web-components): improve screen reader behaviour for multi-select
Use aria-activedescendant to help manage focus when using a screen reader (particularly the issue
when you press the "Select all" button). Change ARIA live region text updating to be handled using a
function instead of in the render() - for consistency, and also to allow for the addition of logic
to prevent repetition. Replace JSDoc "deprecated" tag with "DEPRECATED" to prevent canary ic-select
readme from always trying to re-add <span> (which doesn't render properly in Storybook). Re-add span
to ic-menu readme as props table not visible on Storybook. Remove "Async default" and "Scroll
behaviour" stories from multi-select stories. Remove all single and searchable select stories from
canary Storybook. Update visual test screenshot files. Change clear button to set value to empty
string (consistency with "Clear all" button / deselecting options, and also search bar's clear
button).

.#257

--- a/packages/canary-web-components/src/components/ic-menu-with-multi/ic-menu.css
+++ b/packages/canary-web-components/src/components/ic-menu-with-multi/ic-menu.css
@@ -1,4 +1,4 @@
-@import "../../global/normalize.css";
+@import "../../../dist/core/normalize.css";
 
 /**
  * @prop --ic-z-index-menu: z-index of menu
@@ -180,6 +180,7 @@
 
 .check-icon {
   height: var(--ic-space-lg);
+  min-width: var(--ic-space-lg);
   width: var(--ic-space-lg);
   margin-left: var(--ic-space-xs);
   pointer-events: none;
